# LacreiSaudeBackend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
consultas/: models.py  serializers.py  tests.py  views.py
consultas/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py
